Fix bug makePlan + Add basic function for admin