@@ -9,7 +9,7 @@ public class HobbyCategoryMapping {
     private static final Map<EHobby, List<ELocationCategory>> MAPPING = new HashMap<>();
 
     static {
-        MAPPING.put(EHobby.CUISINE, Arrays.asList(
+        MAPPING.put(EHobby.CUISINE, List.of(
                 ELocationCategory.SNACK,
                 ELocationCategory.RESTAURANT,
                 ELocationCategory.CAFE,
@@ -18,45 +18,45 @@ public class HobbyCategoryMapping {
                 ELocationCategory.SPECIALITY
         ));
 
-        MAPPING.put(EHobby.ADVENTURE, Arrays.asList(
+        MAPPING.put(EHobby.ADVENTURE, List.of(
                 ELocationCategory.AMUSEMENT_WATER_PARK,
                 ELocationCategory.ZOO,
                 ELocationCategory.AQUARIUM,
                 ELocationCategory.MARKET
         ));
 
-        MAPPING.put(EHobby.RELAXATION, Arrays.asList(
+        MAPPING.put(EHobby.RELAXATION, List.of(
                 ELocationCategory.CAFE,
                 ELocationCategory.HOTEL,
                 ELocationCategory.SPECIALITY
         ));
 
-        MAPPING.put(EHobby.NIGHTLIFE, Arrays.asList(
+        MAPPING.put(EHobby.NIGHTLIFE, List.of(
                 ELocationCategory.NIGHT_MARKET,
                 ELocationCategory.RESTAURANT,
                 ELocationCategory.CAFE
         ));
 
-        MAPPING.put(EHobby.HISTORYCULTURE, Arrays.asList(
+        MAPPING.put(EHobby.HISTORYCULTURE, List.of(
                 ELocationCategory.CULTURE_PERFORMANCE,
                 ELocationCategory.FESTIVAL,
                 ELocationCategory.MARKET
         ));
 
-        MAPPING.put(EHobby.HONEYMOON, Arrays.asList(
+        MAPPING.put(EHobby.HONEYMOON, List.of(
                 ELocationCategory.HOTEL,
                 ELocationCategory.CAFE,
                 ELocationCategory.RESTAURANT,
                 ELocationCategory.SPECIALITY
         ));
 
-        MAPPING.put(EHobby.BEACHISLANDTOUR, Arrays.asList(
+        MAPPING.put(EHobby.BEACHISLANDTOUR, List.of(
                 ELocationCategory.HOTEL,
                 ELocationCategory.AMUSEMENT_WATER_PARK,
                 ELocationCategory.MARKET
         ));
 
-        MAPPING.put(EHobby.PHOTOGRAPHY, Arrays.asList(
+        MAPPING.put(EHobby.PHOTOGRAPHY, List.of(
                 ELocationCategory.CAFE,
                 ELocationCategory.MARKET,
                 ELocationCategory.SPECIALITY,
@@ -64,7 +64,7 @@ public class HobbyCategoryMapping {
                 ELocationCategory.FESTIVAL
         ));
 
-        MAPPING.put(EHobby.ENTERTAINMENT, Arrays.asList(
+        MAPPING.put(EHobby.ENTERTAINMENT, List.of(
                 ELocationCategory.AMUSEMENT_WATER_PARK,
                 ELocationCategory.FESTIVAL,
                 ELocationCategory.CULTURE_PERFORMANCE,
